[package]
name = "rust-keyb-32u4"
version = "0.1.0"
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
keyberon = { path = "./../keyberon" }
avr-device = "0.3"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "8ad1be6d95b075d13bca611d177a4cc8b9896d77"
features = ["arduino-leonardo"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[unstable]
build-std = ["core"]
